added jre packaging